--- a/css/productListingPage.css
+++ b/css/productListingPage.css
@@ -8,7 +8,7 @@
 }
 
 .background-color {
-    background: linear-gradient(to bottom, #010129 0%, #000099 100%);
+    background: linear-gradient(to bottom, #3b0303 0%, #200101 100%);
 }
 
 .bebas-neue {
